fix user roles and attributos for auth system